Closed Bug 1207441 Opened 9 years ago Closed 9 years ago

A certain mp4 video fails playback

Categories

(Core :: Audio/Video: Playback, defect)

41 Branch
Unspecified
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla44
Tracking Status
firefox40 --- unaffected
firefox41 --- wontfix
firefox42 --- verified
firefox43 --- verified
firefox44 --- verified

People

(Reporter: alice0775, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(1 file)

A video mp4 fails playback  since Firefox41.
Firefox40 works fine.


Steps To Reproduce:
1. Open a mp4 link in Bug 1207412 commnet #0.
   (i.e., https://people.mozilla.org/~ahalachmi/share/bugs/wheel-jumps_arrows-smooth.mp4 )

Actual Results:
Error "Video can't be played because the file is corrupt"

Expected Results:
Playback
OS: Unspecified → Windows 7
Summary: A cCertain mp4 video fails playback → A certain mp4 video fails playback
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=5ff14e03b5e8fc187be7fc250f12a489cf05bd87&tochange=28fb66c200e4

Regressed by: 28fb66c200e4	Jean-Yves Avenard — Bug 1196696: Always check that track demuxer was successfully created. r=jwwang
Blocks: 1196696
Flags: needinfo?(jyavenard)
WFM on Windows 42, 43 and nightly. Broken on 41.

However, this file wouldn't play anyway on some system (mac in particular), the VideoToolbox framework can't decode it (it's the same on safari).
Flags: needinfo?(jyavenard)
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → WORKSFORME
I can still reproduce the problem on Windows7 Nightly44 and Aurora43 Beta42 as well.

https://hg.mozilla.org/mozilla-central/rev/bf2bc1aa78c0b72d9b6b13f7a8c6ae61c60a51dc
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:44.0) Gecko/20100101 Firefox/44.0 ID:20150924030231

https://hg.mozilla.org/releases/mozilla-aurora/rev/aad7aaaa4476d87f8e9908edf7313f36959c5bfc
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 ID:20150924004027

https://hg.mozilla.org/releases/mozilla-beta/rev/a5dca53807c6
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:42.0) Gecko/20100101 Firefox/42.0 ID:20150921151815
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
As mentioned in bug 1208735; the problem is in the mp4 itself ; it is marked as having an audio track but with 0 channels.

As per ISO/IEC 14496-12:2012 ; 8.5.2 Sample Description Box "ChannelCount is a value greater than zero that indicates the maximum number of channels that the audio could deliver"
I can't see how the range given in comment 1 could have an impact there as the failure occurs later in the WFM decoder rejecting a 0 channels stream
Mark INVALID as per comment #4
Status: REOPENED → RESOLVED
Closed: 9 years ago9 years ago
Resolution: --- → INVALID
I'll keep it open, as it is a regression compare to 40 and earlier, and a file chrome plays.
I have a patch pending
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
(In reply to Jean-Yves Avenard [:jya] from comment #4)
> As mentioned in bug 1208735; the problem is in the mp4 itself ; it is marked
> as having an audio track but with 0 channels.
> 
> As per ISO/IEC 14496-12:2012 ; 8.5.2 Sample Description Box "ChannelCount is
> a value greater than zero that indicates the maximum number of channels that
> the audio could deliver"

While I don't try dispute that the test case file is with inconsistent data (though I didn't know that when I filed the bug), there are probably many many not fully compliant media clips out there, and IMO if we can manage to make them play them in Firefox (even suboptimally) with reasonable effort, we should (per non compliant pattern we're recognizing).

Specifically, this clip plays fine in every media players which I tried, including windows media player (and mpc, vlc, mpv) and, as noted, in Chrome too.

(In reply to Jean-Yves Avenard [:jya] from comment #8)
> ... a file chrome plays. I have a patch pending

Thanks.
Flags: needinfo?(jyavenard)
https://hg.mozilla.org/mozilla-central/rev/ac303706f714
Status: REOPENED → RESOLVED
Closed: 9 years ago9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Blocks: 1200326
This is designed to minimize the chance of regressions.
Attachment #8667065 - Flags: review+
Comment on attachment 8667065 [details] [diff] [review]
[mp4] Ignore invalid tracks.

Approval Request Comment
[Feature/regressing bug #]: 1156689, though the issue was already in original stagefright
[User impact if declined]: Videos that used to play won't play. But more importantly is the root cause of bug 1200326
[Describe test coverage new/current, TreeHerder]: local test, in central
[Risks and why]: Low, we ignore invalid tracks or tracks that stagefright incorrectly reported as available.
[String/UUID change made/needed]: None
Flags: needinfo?(jyavenard)
Attachment #8667065 - Flags: approval-mozilla-beta?
Attachment #8667065 - Flags: approval-mozilla-aurora?
Assignee: nobody → jyavenard
Comment on attachment 8667065 [details] [diff] [review]
[mp4] Ignore invalid tracks.

Fix a regression, taking it. Should be in 42 beta 3.
Attachment #8667065 - Flags: approval-mozilla-beta?
Attachment #8667065 - Flags: approval-mozilla-beta+
Attachment #8667065 - Flags: approval-mozilla-aurora?
Attachment #8667065 - Flags: approval-mozilla-aurora+
Flags: qe-verify+
Reproduced with 42.0b2 → ‘Media resource https://people.mozilla.org/~ahalachmi/share/bugs/wheel-jumps_arrows-smooth.mp4 could not be decoded.’ is displayed in Browser Console and the video cannot be played.

Verified fixed with latest 43.0a2 Developer Edition and 44.0a1 Nightly (both from 2015-09-30), under Windows 7 64-bit and Windows 10 32-bit.
Status: RESOLVED → VERIFIED
Confirming this fix with latest 42.0b3 (20151001142456) too, under Windows 7 64-bit and Windows 10 32-bit.
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: