Bug 1207441 - [mp4] Ignore invalid tracks. r=gerald, a=sylvestre

This is designed to minimize the chance of regressions.

--HG--
extra : source : ac303706f7148c8cfd830d9bf3c4e7064641e00f